--- a/SpaDay6/Views/Spa/Menu.cshtml
+++ b/SpaDay6/Views/Spa/Menu.cshtml
@@ -5,20 +5,27 @@
 }
 
 <div id="clientProfile">
+    <h3>Client Profile</h3>
 </div>
 <div id="servicesMenu">
 </div>
 
 <h1>Fancy Spa</h1>
 <div id="clientProfile">
+    <h3>Client Profile</h3>
+    <p>@ViewBag.name</p>
+    
 </div>
 <div id="servicesMenu">
 
     <h5>Facial Treatments</h5>
-    <p>Your //TODO: pass the skintype value in here// skin type is best suited to the follow facial types:</p>
+    <p>Your @ViewBag.skinType skin type is best suited to the follow facial types:</p>
 
     <ul>
-        //TODO: iterate through appropriate facial treatments
+        @foreach(string face in @ViewBag.appropriateFacials)
+            {
+                <li>@face</li>
+            }
     </ul>
 
     <h5>Nail Services</h5>
