--- a/SpaDay6/Views/Spa/Menu.cshtml
+++ b/SpaDay6/Views/Spa/Menu.cshtml
@@ -4,16 +4,10 @@
 @{
 }
 
-<div id="clientProfile">
-    <h3>Client Profile</h3>
-</div>
-<div id="servicesMenu">
-</div>
-
 <h1>Fancy Spa</h1>
 <div id="clientProfile">
     <h3>Client Profile</h3>
-    <p>@ViewBag.name</p>
+    <p>Name: @ViewBag.name</p>
     
 </div>
 <div id="servicesMenu">
@@ -29,6 +23,19 @@
     </ul>
 
     <h5>Nail Services</h5>
-    // TODO: display a description for the nail service selected
+    <div>
+        @if(@ViewBag.manipedi == "manicure")
+        {
+            <P>
+                Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.
+            </P>
+        } 
+        else
+        {
+            <p>
+                Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!
+            </p>
+        }
+    </div>
 
 </div>
