Completed Studio for chapter14

--- a/SpaDay6/Views/Spa/Menu.cshtml
+++ b/SpaDay6/Views/Spa/Menu.cshtml
@@ -6,6 +6,7 @@
 <h1>Fancy Spa</h1>
 <div id="clientProfile">
     <h3>Client profile</h3>
+    <h3>@ViewBag.name</h3>
 </div>
 <div id="servicesMenu">
     <h5>Facial Treatments</h5>
