--- a/SpaDay6/Views/User/Add.cshtml
+++ b/SpaDay6/Views/User/Add.cshtml
@@ -11,25 +11,25 @@
 <div class="form-group">
    <label asp-for="Username">Username</label>
    <input asp-for="Username" />
-   <span asp-validation-for="Username"></span>
+   <span asp-validation-for="Username" class="text-danger"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="Email">Email</label>
    <input asp-for="Email" />
-   <span asp-validation-for="Email"></span>
+   <span asp-validation-for="Email" class="text-danger"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="Password">Password</label>
    <input type="password" asp-for="Password" />
-   <span asp-validation-for="Password"></span>
+   <span asp-validation-for="Password" class="text-danger"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="VerifyPassword">Verify Password</label>
    <input type="password" asp-for="VerifyPassword" />
-   <span asp-validation-for="VerifyPassword"></span>
+   <span asp-validation-for="VerifyPassword" class="text-danger"></span>
 </div>
 
 
